tests/e2e/semantics/if_scope_joint6.story
if 0 == 0
	a = 0
else
	originalCount = 0

newCount = originalCount + 1
